--- a/index1.html
+++ b/index1.html
@@ -25,7 +25,7 @@
     <main>
         <header class="stick style10">
             <div class="menu-wrp2">
-                <div class="logo"><a href="index.html" title="Logo" itemprop="url"><img src="assets/images/logo4.png" alt="logo4.png" itemprop="image"></a></div>
+                <div class="logo"><a href="index.html" title="Logo" itemprop="url"><img src="assets/images/cdek.png" alt="logo4.png" itemprop="image"></a></div>
                 <nav>
                     <div>
                         <div class="hdr-scl">
@@ -37,23 +37,23 @@
                         <ul>
                             <li class="menu-item-has-children"><a href="#" title="" itemprop="url">Home</a>
                                 <ul class="children mirror">
-                                    <li><a href="index.html" title="" itemprop="url">Homepage 1</a></li>
-                                    <li><a href="index2.html" title="" itemprop="url">Homepage 2</a></li>
-                                    <li><a href="index3.html" title="" itemprop="url">Homepage 3</a></li>
-                                    <li><a href="index4.html" title="" itemprop="url">Homepage 4</a></li>
-                                    <li><a href="index5.html" title="" itemprop="url">Homepage 5</a></li>
-                                    <li><a href="index6.html" title="" itemprop="url">Homepage 6</a></li>
-                                    <li><a href="index7.html" title="" itemprop="url">Homepage 7</a></li>
+                                    <li><a href="index1.html" title="" itemprop="url">Homepage 1</a></li>
+                                    <!-- <li><a href="index2.html" title="" itemprop="url">Homepage 2</a></li> -->
+                                    <li><a href="" title="" itemprop="url">Homepage 3</a></li>
+                                    <!-- <li><a href="index4.html" title="" itemprop="url">Homepage 4</a></li> -->
+                                    <li><a href="" title="" itemprop="url">Homepage 5</a></li>
+                                    <!-- <li><a href="index6.html" title="" itemprop="url">Homepage 6</a></li> -->
+                                    <!-- <li><a href="index7.html" title="" itemprop="url">Homepage 7</a></li>
                                     <li><a href="index8.html" title="" itemprop="url">Homepage 8</a></li>
                                     <li><a href="index9.html" title="" itemprop="url">Homepage 9</a></li>
                                     <li><a href="index10.html" title="" itemprop="url">Homepage 10</a></li>
                                     <li><a href="index11.html" title="" itemprop="url">Homepage 11</a></li>
                                     <li><a href="index12.html" title="" itemprop="url">Homepage 12</a></li>
-                                    <li><a href="index13.html" title="" itemprop="url">Homepage 13</a></li>
+                                    <li><a href="index13.html" title="" itemprop="url">Homepage 13</a></li> -->
                                 </ul>
                             </li>
                             <li class="menu-item-has-children"><a href="#" title="" itemprop="url">Blog</a>
-                                <div class="mga-mnu center">
+                                <!-- <div class="mga-mnu center">
                                     <div class="row">
                                         <div class="col-md-3 col-sm-6 col-lg-3">
                                             <div class="mga-lnks">
@@ -84,10 +84,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </li>
                             <li class="menu-item-has-children"><a href="#" title="" itemprop="url">Portfolio</a>
-                                <div class="mga-mnu center">
+                                <!-- <div class="mga-mnu center">
                                     <div class="row">
                                         <div class="col-md-3 col-sm-6 col-lg-3">
                                             <div class="mga-lnks">
@@ -129,34 +129,34 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </li>
                             <li class="menu-item-has-children"><a href="#" title="" itemprop="url">Pages</a>
-                                <ul class="children">
+                                <!-- <ul class="children">
                                     <li><a href="price-table.html" title="" itemprop="url">Price Table Style 1</a></li>
                                     <li><a href="price-table2.html" title="" itemprop="url">Price Table Style 2</a></li>
                                     <li><a href="service-detail.html" title="" itemprop="url">Service Detail</a></li>
                                     <li><a href="service-detail-left-sidebar.html" title="" itemprop="url">Service Detail Left Sidebar</a></li>
                                     <li><a href="service-detail-right-sidebar.html" title="" itemprop="url">Service Detail Right Sidebar</a></li>
                                     <li><a href="company-history.html" title="" itemprop="url">Company History</a></li>
-                                </ul>
+                                </ul> -->
                             </li>
                             <li class="menu-item-has-children"><a href="#" title="" itemprop="url">About</a>
-                                <ul class="children">
+                                <!-- <ul class="children">
                                     <li><a href="about-me.html" title="" itemprop="url">About Me Style 1</a></li>
                                     <li><a href="about-me2.html" title="" itemprop="url">About Me Style 2</a></li>
                                     <li><a href="about.html" title="" itemprop="url">About Style 1</a></li>
                                     <li><a href="about2.html" title="" itemprop="url">About Style 2</a></li>
                                     <li><a href="about3.html" title="" itemprop="url">About Style 3</a></li>
                                     <li><a href="about4.html" title="" itemprop="url">About Style 4</a></li>
-                                </ul>
+                                </ul> -->
                             </li>
                             <li class="menu-item-has-children"><a href="#" title="" itemprop="url">Contact</a>
-                                <ul class="children">
+                                <!-- <ul class="children">
                                     <li><a href="contact.html" title="" itemprop="url">Contact Style 1</a></li>
                                     <li><a href="contact2.html" title="" itemprop="url">Contact Style 2</a></li>
                                     <li><a href="contact3.html" title="" itemprop="url">Contact Style 3</a></li>
-                                </ul>
+                                </ul> -->
                             </li>
                         </ul>
                     </div>
