--- a/index1.html
+++ b/index1.html
@@ -25,7 +25,7 @@
     <main>
         <header class="stick style10">
             <div class="menu-wrp2">
-                <div class="logo"><a href="index.html" title="Logo" itemprop="url"><img src="assets/images/cdek.png" alt="logo4.png" itemprop="image"></a></div>
+                <div class="logo"><a href="index.html" title="Logo" itemprop="url"><img src="assets/images/uticologo.png" alt="logo4.png" itemprop="image"></a></div>
                 <nav>
                     <div>
                         <div class="hdr-scl">
@@ -165,7 +165,7 @@
         </header><!-- Header -->
         <div class="menu-wrp3 sticky-header">
             <div class="container">
-                <div class="logo"><a href="index.html" title="Logo" itemprop="url"><img src="assets/images/cdek.png" height="28" alt="logo.png" itemprop="image"></a></div>
+                <div class="logo"><a href="index.html" title="Logo" itemprop="url"><img src="assets/images/uticologo.png" height="28" alt="logo.png" itemprop="image"></a></div>
                 <nav>
                     <div>
                         <ul>
