--- a/index1.html
+++ b/index1.html
@@ -783,6 +783,58 @@
                 </div>
             </div><!-- END REVOLUTION SLIDER -->
         </section>
+        <section style="margin-top:-150px;position: relative;z-index: 1000;">
+            <div class="gap bottom-spac200">
+                <div class="container">
+                    <div class="remove-ext3">
+                        <div class="row">
+                            <div class="col-md-4 col-sm-6 col-lg-4 slideInUp wow" data-wow-duration=".8s" data-wow-delay=".1s">
+                                <div class="pst-box-styl3">
+                                    <div class="pst-thmb-styl3">
+                                        <a href="blog-detail-right-sidebar.html" title="" itemprop="url"><img src="assets/images/resources/pst-img3-1.jpg" alt="pst-img3-1.jpg" itemprop="image"></a>
+                                    </div>
+                                    <div class="pst-inf-styl3">
+                                        <span>15 Oct, 2019</span>
+                                        <h4 itemprop="headline"><a href="blog-detail-right-sidebar.html" title="" itemprop="url">Name of case</a></h4>
+                                        <span class="pst-cat"><a href="#" title="" itemprop="url">Seanding</a>, <a href="#" title="" itemprop="url">Website</a>, <a href="#" title="" itemprop="url">E-commerce</a></span>
+                                        <p itemprop="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tincidunt augue in nisi auctor rhoncus.</p>
+                                        <a href="blog-detail-right-sidebar.html" title="" itemprop="url"><i class="fa fa-arrow-right"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-sm-6 col-lg-4 slideInUp wow" data-wow-duration=".8s" data-wow-delay=".2s">
+                                <div class="pst-box-styl3">
+                                    <div class="pst-thmb-styl3">
+                                        <a href="blog-detail-right-sidebar.html" title="" itemprop="url"><img src="assets/images/resources/pst-img3-2.jpg" alt="pst-img3-2.jpg" itemprop="image"></a>
+                                    </div>
+                                    <div class="pst-inf-styl3">
+                                        <span>15 Oct, 2019</span>
+                                        <h4 itemprop="headline"><a href="blog-detail-right-sidebar.html" title="" itemprop="url">Name of case</a></h4>
+                                        <span class="pst-cat"><a href="#" title="" itemprop="url">Seanding</a>, <a href="#" title="" itemprop="url">Website</a>, <a href="#" title="" itemprop="url">E-commerce</a></span>
+                                        <p itemprop="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tincidunt augue in nisi auctor rhoncus.</p>
+                                        <a href="blog-detail-right-sidebar.html" title="" itemprop="url"><i class="fa fa-arrow-right"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-sm-6 col-lg-4 slideInUp wow" data-wow-duration=".8s" data-wow-delay=".3s">
+                                <div class="pst-box-styl3">
+                                    <div class="pst-thmb-styl3">
+                                        <a href="blog-detail-right-sidebar.html" title="" itemprop="url"><img src="assets/images/resources/pst-img3-3.jpg" alt="pst-img3-3.jpg" itemprop="image"></a>
+                                    </div>
+                                    <div class="pst-inf-styl3">
+                                        <span>15 Oct, 2019</span>
+                                        <h4 itemprop="headline"><a href="blog-detail-right-sidebar.html" title="" itemprop="url">Name of case</a></h4>
+                                        <span class="pst-cat"><a href="#" title="" itemprop="url">Seanding</a>, <a href="#" title="" itemprop="url">Website</a>, <a href="#" title="" itemprop="url">E-commerce</a></span>
+                                        <p itemprop="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tincidunt augue in nisi auctor rhoncus.</p>
+                                        <a href="blog-detail-right-sidebar.html" title="" itemprop="url"><i class="fa fa-arrow-right"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section>
             <div class="gap">
                 <div class="container">
