--- a/uticoindex1.html
+++ b/uticoindex1.html
@@ -1014,14 +1014,15 @@
                             <div class="col-md-6 col-sm-12 col-lg-6">
                                 <div class="busns-slut-tbs">
                                     <ul class="nav nav-tabs">
-                                        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#busns-slut-tb1">Web Development</a></li>
-                                        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#busns-slut-tb2">Branding</a></li>
-                                        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#busns-slut-tb3">Photography</a></li>
+                                        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#busns-slut-tb1">Water</a></li>
+                                        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#busns-slut-tb2">Power</a></li>
+                                        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#busns-slut-tb3">Renewables</a></li>
+                                        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#busns-slut-tb4">All Sectors</a></li>
                                     </ul>
                                     <div class="tab-content">
                                         <div class="tab-pane fade show active" id="busns-slut-tb1" >
-                                            <h2 itemprop="headline" style="color:white";>We provide the solutions to grow your business</h2>
-                                            <p itemprop="description" style="color:white";>Suspendisse facilisis commodo lobortis. Nullam mollis lobortis ex vel faucibus. Proin nec viverra turpis. Nulla eget justo scelerisque, pretium purus vel, congue libero. Suspendisse potenti. Sed risus nisi, auctor nec auctor id, luctus sed dui. In ex tellus, malesuada cursus erat sed, fermentum hendrerit turpis.</p>
+                                            <h2 itemprop="headline" style="color:white";>Total Water Solution</h2>
+                                            <p itemprop="description" style="color:white";>Utico's Water and Water Solution business offers a range of solutions for various applications in industrial sector, muncipal corporations, commercial and defence establishments and the hospitality industry.</p>
                                             <!-- <div class="skl-prg-wrp">
                                                 <div class="row">
                                                     <div class="col-md-6 col-sm-6 col-lg-6">
@@ -1046,12 +1047,9 @@
                                             </div> -->
                                         </div>
                                         <div class="tab-pane fade" id="busns-slut-tb2">
-                                            <h2 itemprop="headline">We provide the solutions to grow your business</h2>
-                                            <p itemprop="description">Suspendisse facilisis commodo lobortis. Nullam mollis lobortis ex vel faucibus. Proin nec
-                                                viverra turpis. Nulla eget justo scelerisque, pretium purus vel, congue libero. Suspendisse potenti. Sed risus
-                                                nisi, auctor nec auctor id, luctus sed dui. In ex tellus, malesuada cursus erat sed, fermentum hendrerit
-                                                turpis.</p>
-                                            <div class="skl-prg-wrp">
+                                            <h2 itemprop="headline"style="color:white">Total Water Solution</h2>
+                                            <p itemprop="description"style="color:white">Utico's Water and Water Solution business offers a range of solutions for various applications in industrial sector, muncipal corporations, commercial and defence establishments and the hospitality industry.</p>
+                                            <!-- <div class="skl-prg-wrp">
                                                 <div class="row">
                                                     <div class="col-md-6 col-sm-6 col-lg-6">
                                                         <div class="skl-prg">
@@ -1072,15 +1070,12 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
                                         <div class="tab-pane fade" id="busns-slut-tb3">
-                                            <h2 itemprop="headline">We provide the solutions to grow your business</h2>
-                                            <p itemprop="description">Suspendisse facilisis commodo lobortis. Nullam mollis lobortis ex vel faucibus. Proin nec
-                                                viverra turpis. Nulla eget justo scelerisque, pretium purus vel, congue libero. Suspendisse potenti. Sed risus
-                                                nisi, auctor nec auctor id, luctus sed dui. In ex tellus, malesuada cursus erat sed, fermentum hendrerit
-                                                turpis.</p>
-                                            <div class="skl-prg-wrp">
+                                            <h2 itemprop="headline"style="color:white">Total Water Solution</h2>
+                                            <p itemprop="description"style="color:white">Utico's Water and Water Solution business offers a range of solutions for various applications in industrial sector, muncipal corporations, commercial and defence establishments and the hospitality industry.</p>
+                                            <!-- <div class="skl-prg-wrp">
                                                 <div class="row">
                                                     <div class="col-md-6 col-sm-6 col-lg-6">
                                                         <div class="skl-prg">
@@ -1103,8 +1098,36 @@
                                                 </div>
                                             </div>
                                         </div>
+                                    </div> -->
+                                </div>
+                                <div class="tab-pane fade" id="busns-slut-tb4">
+                                    <h2 itemprop="headline"style="color:white">Total Water Solution</h2>
+                                    <p itemprop="description"style="color:white">Utico's Water and Water Solution business offers a range of solutions for various applications in industrial sector, muncipal corporations, commercial and defence establishments and the hospitality industry.</p>
+                                    <!-- <div class="skl-prg-wrp">
+                                        <div class="row">
+                                            <div class="col-md-6 col-sm-6 col-lg-6">
+                                                <div class="skl-prg">
+                                                    <span class="pull-left">Marketing online</span>
+                                                    <span class="pull-right">50%</span>
+                                                    <div class="progress">
+                                                        <div class="progress-bar thm-bg wdth50 slideInLeft wow" data-wow-duration=".1s" data-wow-delay=".1s"></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 col-sm-6 col-lg-6">
+                                                <div class="skl-prg">
+                                                    <span class="pull-left">Marketing online</span>
+                                                    <span class="pull-right">100%</span>
+                                                    <div class="progress">
+                                                        <div class="progress-bar thm-bg wdth100 slideInLeft wow" data-wow-duration=".1s" data-wow-delay=".2s"></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
+                            </div> -->
+                        </div>
                             </div>
                         </div>
                     </div>
@@ -1257,7 +1280,7 @@
                                         <li><a href="#" title="" itemprop="url">Stories</a></li>
                                         <li><a href="#" title="" itemprop="url">Leadership</a></li>
                                     </ul>
-                                    <img src="assets/images/resources/abt-srv-img.png" alt="abt-srv-img.png" itemprop="image">
+                                    <img src="assets/images/erth.jpg" alt="abt-srv-img.png" itemprop="image">
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-12 col-lg-6">
@@ -1280,7 +1303,7 @@
                         <div class="row">
                             <div class="col-md-6 col-sm-12 col-lg-6 slideInLeft wow" data-wow-duration="1s" data-wow-delay=".2s">
                                 <div class="tgl-mckp">
-                                    <img src="assets/images/resources/tgl-mckp1.png" alt="tgl-mckp1.png" itemprop="image">
+                                    <img src="assets/images/wtr.jpg" alt="tgl-mckp1.png" itemprop="image">
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-12 col-lg-6 slideInRight wow" data-wow-duration="1s" data-wow-delay=".2s">
@@ -1714,6 +1737,29 @@
                 </div>
             </div>
         </section>
+         <section>
+            <div class="gap remove-gap">
+                <div class="container">
+                    <div class="spnsr-wrp spnsr-car text-center owl-carousel">
+                        <div class="spnsr-itm">
+                            <a href="#" title="" itemprop="url"><img src="assets/images/dummy-logo.png" alt="spnsr-img1-1.png" itemprop="image"></a>
+                        </div>
+                        <div class="spnsr-itm">
+                            <a href="#" title="" itemprop="url"><img src="assets/images/dummy-logo.png" alt="spnsr-img1-2.png" itemprop="image"></a>
+                        </div>
+                        <div class="spnsr-itm">
+                            <a href="#" title="" itemprop="url"><img src="assets/images/dummy-logo.png" alt="spnsr-img1-3.png" itemprop="image"></a>
+                        </div>
+                        <div class="spnsr-itm">
+                            <a href="#" title="" itemprop="url"><img src="assets/images/dummy-logo.png" alt="spnsr-img1-4.png" itemprop="image"></a>
+                        </div>
+                        <div class="spnsr-itm">
+                            <a href="#" title="" itemprop="url"><img src="assets/images/dummy-logo.png" alt="spnsr-img1-5.png" itemprop="image"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> 
         <footer>
             <div class="gap drk-bg top-spac80 bottom-spac80">
                 <div class="container">
@@ -1814,6 +1860,7 @@
                                     </div>
                                 </div>
                             </div>
+                            
                             <!-- <div class="col-md-3 col-sm-6 col-lg-3">
                                 <div class="wdgt">
                                     <h4 itemprop="headline">Gallery</h4>
@@ -1837,28 +1884,58 @@
                                     </div>
                                 </div>
                             </div> -->
-                            <div class="col-md-3 col-sm-6 col-lg-3">
+                            <!--<div class="col-md-3 col-sm-6 col-lg-3">
                                 <div class="wdgt">
                                     <h4 itemprop="headline">Solutions</h4>
                                     <div class="wdgt-pst-wrp">
                                         <div class="wdgt-pst">
-                                           <!--<a href="blog-detail-right-sidebar.html" title="" itemprop="url"><img src="assets/images/resources/wdgt-pst-img2-1.jpg" alt="wdgt-pst-img1-1.jpg" itemprop="image"></a> -->
+                                           <a href="blog-detail-right-sidebar.html" title="" itemprop="url"><img src="assets/images/resources/wdgt-pst-img2-1.jpg" alt="wdgt-pst-img1-1.jpg" itemprop="image"></a> 
                                             <div class="wdgt-inf">
                                                 <h4 itemprop="headline"><a href="blog-detail-right-sidebar.html" title="" itemprop="url">Services </a></h4>
-                                                <!--<span><i class="fa fa-clock-o"></i>July 18, 2016</span>-->
+                                                <span><i class="fa fa-clock-o"></i>July 18, 2016</span>
                                             </div>
                                         </div>
                                         <div class="wdgt-pst">
-                                        <!--    <a href="blog-detail-right-sidebar.html" title="" itemprop="url"><img src="assets/images/resources/wdgt-pst-img2-2.jpg" alt="wdgt-pst-img1-2.jpg" itemprop="image"></a> -->
+                                         <a href="blog-detail-right-sidebar.html" title="" itemprop="url"><img src="assets/images/resources/wdgt-pst-img2-2.jpg" alt="wdgt-pst-img1-2.jpg" itemprop="image"></a> 
                                             <div class="wdgt-inf">
                                                 <h4 itemprop="headline"><a href="blog-detail-right-sidebar.html" title="" itemprop="url">Innovation</a></h4>
-                                               <!--<span><i class="fa fa-clock-o"></i>August 20, 2018</span> -->
+                                               <span><i class="fa fa-clock-o"></i>August 20, 2018</span> 
                                             </div>
                                         </div>
                                         
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
+                            <div class="col-md-3 col-sm-6 col-lg-3">
+                                <div class="wdgt">
+                                    <div class="wdgt-pst">
+                                        <!--<a href="blog-detail-right-sidebar.html" title="" itemprop="url"><img src="assets/images/resources/wdgt-pst-img2-3.jpg" alt="wdgt-pst-img1-3.jpg" itemprop="image"></a>-->
+                                        <div class="wdgt-inf">
+                                            <h4 itemprop="headline"><a href="blog-detail-right-sidebar.html" title="" itemprop="url">Location</a></h4>
+                                           <!-- <span><i class="fa fa-clock-o"></i>April 25, 2017</span>-->
+                                        </div>
+                                    </div>
+                                    <h4 itemprop="headline">We are Everywhere</h4>
+                                    <div class="wdgt-gal-car owl-carousel">
+                                        <div class="wdgt-gal-itm">
+                                            <div class="row mrg">
+                                                <div class="col-md-6 col-sm-6 col-lg-6"><img src="assets/demo/world_map.png" alt="wdgt-gal-img1-1.jpg" itemprop="image"></div>
+                                                <!--<div class="col-md-6 col-sm-6 col-lg-6"><img src="assets/images/resources/wdgt-gal-img1-2.jpg" alt="wdgt-gal-img1-2.jpg" itemprop="image"></div>
+                                                <div class="col-md-6 col-sm-6 col-lg-6"><img src="assets/images/resources/wdgt-gal-img1-3.jpg" alt="wdgt-gal-img1-3.jpg" itemprop="image"></div>
+                                                <div class="col-md-6 col-sm-6 col-lg-6"><img src="assets/images/resources/wdgt-gal-img1-4.jpg" alt="wdgt-gal-img1-4.jpg" itemprop="image"></div>-->
+                                            </div>
+                                        </div>
+                                        <!--<div class="wdgt-gal-itm">
+                                            <div class="row mrg">
+                                                <div class="col-md-6 col-sm-6 col-lg-6"><img src="assets/images/resources/wdgt-gal-img2-1.jpg" alt="wdgt-gal-img2-1.jpg" itemprop="image"></div>
+                                                <div class="col-md-6 col-sm-6 col-lg-6"><img src="assets/images/resources/wdgt-gal-img2-2.jpg" alt="wdgt-gal-img2-2.jpg" itemprop="image"></div>
+                                                <div class="col-md-6 col-sm-6 col-lg-6"><img src="assets/images/resources/wdgt-gal-img2-3.jpg" alt="wdgt-gal-img2-3.jpg" itemprop="image"></div>
+                                                <div class="col-md-6 col-sm-6 col-lg-6"><img src="assets/images/resources/wdgt-gal-img2-4.jpg" alt="wdgt-gal-img2-4.jpg" itemprop="image"></div>
+                                            </div>
+                                        </div> -->
+                                    </div>
+                                </div>
+                            </div> 
                         </div>
                     </div><!-- Footer Wrap -->
                 </div>
