--- a/uticoindex1.html
+++ b/uticoindex1.html
@@ -1308,25 +1308,25 @@
                             </div>
                             <div class="col-md-6 col-sm-12 col-lg-6 slideInRight wow" data-wow-duration="1s" data-wow-delay=".2s">
                                 <div class="tgl-wrp">
-                                    <h2 itemprop="headline">How we Can help you with our Expert Consulting</h2>
-                                    <p itemprop="description">Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim</p>
+                                    <h2 itemprop="headline">Title Here</h2>
+                                    <p itemprop="description">Content here.Content here.Content here.Content here.Content here.Content here.Content here. </p>
                                     <div id="tgl1" class="tgl-styl">
                                         <div class="tgl-itm">
-                                            <h4>01. Best Financial Planning<i class="fa fa-plus"></i></h4>
+                                            <h4>01. Sub-Title Here<i class="fa fa-plus"></i></h4>
                                             <div class="tgl-cnt">
-                                                <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernaturrati</p>
+                                                <p>Content here.Content here.Content here.Content here.Content here.Content here.</p>
                                             </div>
                                         </div>
                                         <div class="tgl-itm">
-                                            <h4>02. Best Business Solution<i class="fa fa-plus"></i></h4>
+                                            <h4>02. Sub-Title Here<i class="fa fa-plus"></i></h4>
                                             <div class="tgl-cnt">
-                                                <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernaturrati</p>
+                                                <p>Content here.Content here.Content here.Content here.Content here.Content here.</p>
                                             </div>
                                         </div>
                                         <div class="tgl-itm">
-                                            <h4>03. Best Expert Consultance<i class="fa fa-plus"></i></h4>
+                                            <h4>03. Sub-Title Here<i class="fa fa-plus"></i></h4>
                                             <div class="tgl-cnt">
-                                                <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernaturrati</p>
+                                                <p>Content here.Content here.Content here.Content here.Content here.Content here.</p>
                                             </div>
                                         </div>
                                     </div><!-- Accordions  -->
