--- a/uticoindex1.html
+++ b/uticoindex1.html
@@ -1704,7 +1704,7 @@
             <div style="margin:50px;"></div>
         </section>
 
-        <section>
+        <!-- <section>
             <div class="gap remove-gap">
                 <div class="container">
                     <div class="cnt-mp-inf-wrp">
@@ -1733,10 +1733,10 @@
                                 </div>
                             </div>
                         </div>
-                    </div><!-- Contact Map & Info Wrap -->
+                    </div>
                 </div>
             </div>
-        </section>
+        </section> -->
          <section>
             <div class="gap remove-gap">
                 <div class="container">
@@ -1919,7 +1919,7 @@
                                     <div class="wdgt-gal-car owl-carousel">
                                         <div class="wdgt-gal-itm">
                                             <div class="row mrg">
-                                                <div class="col-md-6 col-sm-6 col-lg-6"><img src="assets/demo/world_map.png" alt="wdgt-gal-img1-1.jpg" itemprop="image"></div>
+                                                <div class="col-md-12 col-sm-12 col-lg-12"><img src="assets/demo/world_map.png" alt="wdgt-gal-img1-1.jpg" itemprop="image"></div>
                                                 <!--<div class="col-md-6 col-sm-6 col-lg-6"><img src="assets/images/resources/wdgt-gal-img1-2.jpg" alt="wdgt-gal-img1-2.jpg" itemprop="image"></div>
                                                 <div class="col-md-6 col-sm-6 col-lg-6"><img src="assets/images/resources/wdgt-gal-img1-3.jpg" alt="wdgt-gal-img1-3.jpg" itemprop="image"></div>
                                                 <div class="col-md-6 col-sm-6 col-lg-6"><img src="assets/images/resources/wdgt-gal-img1-4.jpg" alt="wdgt-gal-img1-4.jpg" itemprop="image"></div>-->
