--- a/uticoindex1.html
+++ b/uticoindex1.html
@@ -1327,6 +1327,8 @@
                                     data-wow-delay=".2s">
                                     <div>
                                         <img src="assets/images/earth1.jpg" alt="tgl-mckp1.png" itemprop="image">
+                                        
+                                        <a class="thm-btn" href="" title="" style=" margin-top:1%;background-color: #e2bd20;"itemprop="url">Hire Us</a>
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-sm-12 col-lg-6 slideInRight wow" data-wow-duration="1s"
