--- a/uticoindex1.html
+++ b/uticoindex1.html
@@ -1308,7 +1308,9 @@
                 </div>
             </div>
         </section>
-
+<section>
+   
+</section>
         <!--tabs-->
         <section>
             <div class="gap">
@@ -1332,6 +1334,51 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-sm-12 col-lg-6 slideInRight wow" data-wow-duration="1s"
+                                    data-wow-delay=".2s">
+                                <ul class="nav nav-tabs" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" data-toggle="tab"  href="#tabs-1" role="tab">Water</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab">Power</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" data-toggle="tab" href="#tabs-3" role="tab">Renewables</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" data-toggle="tab" href="#tabs-3" role="tab">All Sectors</a>
+                                    </li>
+                                </ul><!-- Tab panes -->
+                                <br>
+                                <br>
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="tabs-1" role="tabpanel">
+                                        <h3 style="color:white;">Total Water Solution</h3>
+                                            <p style="color:white;">Utico's Water and Water Solution business offers a range of solutions for
+                                                various applications in industrial sector, muncipal corporations,
+                                                commercial and defence establishments and the hospitality industry.</p>
+                                    </div>
+                                    <div class="tab-pane" id="tabs-2" role="tabpanel">
+                                        <h3 style="color:white;">Total Water Solution</h3>
+                                            <p style="color:white;">Utico's Water and Water Solution business offers a range of solutions for
+                                                various applications in industrial sector, muncipal corporations,
+                                                commercial and defence establishments and the hospitality industry.</p>
+                                    </div>
+                                    <div class="tab-pane" id="tabs-3" role="tabpanel">
+                                        <h3 style="color:white;">Total Water Solution</h3>
+                                            <p style="color:white;">Utico's Water and Water Solution business offers a range of solutions for
+                                                various applications in industrial sector, muncipal corporations,
+                                                commercial and defence establishments and the hospitality industry.</p>
+                                    </div>
+                                    <div class="tab-pane" id="tabs-3" role="tabpanel">
+                                        <h3 style="color:white;">Total Water Solution</h3>
+                                            <p style="color:white;">Utico's Water and Water Solution business offers a range of solutions for
+                                                various applications in industrial sector, muncipal corporations,
+                                                commercial and defence establishments and the hospitality industry.</p>
+                                    </div>
+                                </div>
+                                </div>
+                                <!-- <div class="col-md-6 col-sm-12 col-lg-6 slideInRight wow" data-wow-duration="1s"
                                     data-wow-delay=".2s">
                                     <ul class="nav nav-tabs">
                                         <li class="active btn btn-primary"
@@ -1372,12 +1419,15 @@
                                                 commercial and defence establishments and the hospitality industry.</p>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div><!-- Toggles Wrap -->
                     </div>
                 </div>
             </div>
+        </section>
+        <section>
+            
         </section>
         <section>
             <div class="gap remove-gap">
