--- a/uticoindex1.html
+++ b/uticoindex1.html
@@ -1157,11 +1157,11 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <section>
+        </section>-->
+        <section style="margin-top: -14%;">
             <div class="gap remove-gap">
                 <div class="sec-title text-center">
-                    <span>Quickly unleash cross</span>
+                    <!-- <span>Quickly unleash cross</span> -->
                     <h3 itemprop="headline">Our Best Work</h3>
                 </div>
                 <div class="prtfl-fltrs-wrp text-center">
@@ -1223,7 +1223,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section> 
         <section>
             <div class="gap">
                 <div class="container">
@@ -1253,7 +1253,7 @@
                                         here.Content here.Content here.Content here.Content here.Content here.Content
                                         here.</p>
                                     <a class="thm-btn" href="" title="" itemprop="url"
-                                        style="background-color: #e2bd20;">Read More</a>
+                                        style="background-color: #22be32;">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -1330,23 +1330,23 @@
                                     <div>
                                         <img src="assets/images/earth1.jpg" alt="tgl-mckp1.png" itemprop="image">
                                         
-                                        <a class="thm-btn" href="" title="" style=" margin-top:1%;background-color: #e2bd20;"itemprop="url">Hire Us</a>
+                                        <a class="thm-btn" href="" title="" style=" margin-top:1%;background-color: #22be32; "itemprop="url">Hire Us</a>
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-sm-12 col-lg-6 slideInRight wow" data-wow-duration="1s"
                                     data-wow-delay=".2s">
                                 <ul class="nav nav-tabs" role="tablist">
                                     <li class="nav-item">
-                                        <a class="nav-link active" data-toggle="tab"  href="#tabs-1" role="tab">Water</a>
+                                        <a class="nav-link active" data-toggle="tab"  href="#tabs-1" role="tab" style="border:none;font-weight: bold;">Water</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab">Power</a>
+                                        <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab"style="border:none;font-weight: bold;">Power</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" data-toggle="tab" href="#tabs-3" role="tab">Renewables</a>
+                                        <a class="nav-link" data-toggle="tab" href="#tabs-3" role="tab"style="border:none;font-weight: bold;">Renewables</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" data-toggle="tab" href="#tabs-3" role="tab">All Sectors</a>
+                                        <a class="nav-link" data-toggle="tab" href="#tabs-3" role="tab"style="border:none;font-weight: bold;">All Sectors</a>
                                     </li>
                                 </ul><!-- Tab panes -->
                                 <br>
