--- a/uticoindex1.html
+++ b/uticoindex1.html
@@ -1224,6 +1224,118 @@
                 </div>
             </div>
         </section> 
+
+        <section  style="margin-top: 100px;">
+            <div class="gap">
+                <div class="container">
+                    <div class="busns-slut-wrp">
+                        <div class="row">
+                            <div class="col-md-6 col-sm-12 col-lg-6 slideInLeft wow" data-wow-duration="1s" data-wow-delay=".2s">
+                                <div class="hir-box text-center">
+                                    <img src="assets/images/earth1.jpg" height="609" width="473" alt="aply-mckp.png" itemprop="image">
+                                    <a class="thm-btn" href="contact.html" title="" itemprop="url">Hire Us</a>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-sm-12 col-lg-6">
+                                <div class="busns-slut-tbs">
+                                    <ul class="nav nav-tabs">
+                                        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#busns-slut-tb1">Water</a></li>
+                                        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#busns-slut-tb2">Power</a></li>
+                                        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#busns-slut-tb3">Renewable</a></li>
+                                    </ul>
+                                    <div class="tab-content">
+                                        <div class="tab-pane fade show active" id="busns-slut-tb1">
+                                            <h2 itemprop="headline">Total Water Solution</h2>
+                                            <p itemprop="description">Utico's Water and Water Solution business offers a range of solutions for
+                                                various applications in industrial sector, muncipal corporations,
+                                                commercial and defence establishments and the hospitality industry.</p>
+                                            <!-- <div class="skl-prg-wrp">
+                                                <div class="row">
+                                                    <div class="col-md-6 col-sm-6 col-lg-6">
+                                                        <div class="skl-prg">
+                                                            <span class="pull-left">Marketing online</span>
+                                                            <span class="pull-right">70%</span>
+                                                            <div class="progress">
+                                                                <div class="progress-bar thm-bg wdth70 slideInLeft wow" data-wow-duration=".2s" data-wow-delay=".1s"></div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-6 col-sm-6 col-lg-6">
+                                                        <div class="skl-prg">
+                                                            <span class="pull-left">Marketing online</span>
+                                                            <span class="pull-right">90%</span>
+                                                            <div class="progress">
+                                                                <div class="progress-bar thm-bg wdth90 slideInLeft wow" data-wow-duration=".2s" data-wow-delay=".2s"></div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div> -->
+                                        </div>
+                                        <div class="tab-pane fade" id="busns-slut-tb2">
+                                            <h2 itemprop="headline">Total Water Solution</h2>
+                                            <p itemprop="description">Utico's Water and Water Solution business offers a range of solutions for
+                                                various applications in industrial sector, muncipal corporations,
+                                                commercial and defence establishments and the hospitality industry.</p>
+                                            <!-- <div class="skl-prg-wrp">
+                                                <div class="row">
+                                                    <div class="col-md-6 col-sm-6 col-lg-6">
+                                                        <div class="skl-prg">
+                                                            <span class="pull-left">Marketing online</span>
+                                                            <span class="pull-right">40%</span>
+                                                            <div class="progress">
+                                                                <div class="progress-bar thm-bg wdth40 slideInLeft wow" data-wow-duration=".1s" data-wow-delay=".1s"></div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-6 col-sm-6 col-lg-6">
+                                                        <div class="skl-prg">
+                                                            <span class="pull-left">Marketing online</span>
+                                                            <span class="pull-right">60%</span>
+                                                            <div class="progress">
+                                                                <div class="progress-bar thm-bg wdth60 slideInLeft wow" data-wow-duration=".1s" data-wow-delay=".2s"></div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div> -->
+                                        </div>
+                                        <div class="tab-pane fade" id="busns-slut-tb3">
+                                            <h2 itemprop="headline">Total Water Solution</h2>
+                                            <p itemprop="description">Utico's Water and Water Solution business offers a range of solutions for
+                                                various applications in industrial sector, muncipal corporations,
+                                                commercial and defence establishments and the hospitality industry.</p>
+                                            <!-- <div class="skl-prg-wrp">
+                                                <div class="row">
+                                                    <div class="col-md-6 col-sm-6 col-lg-6">
+                                                        <div class="skl-prg">
+                                                            <span class="pull-left">Marketing online</span>
+                                                            <span class="pull-right">50%</span>
+                                                            <div class="progress">
+                                                                <div class="progress-bar thm-bg wdth50 slideInLeft wow" data-wow-duration=".1s" data-wow-delay=".1s"></div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-6 col-sm-6 col-lg-6">
+                                                        <div class="skl-prg">
+                                                            <span class="pull-left">Marketing online</span>
+                                                            <span class="pull-right">100%</span>
+                                                            <div class="progress">
+                                                                <div class="progress-bar thm-bg wdth100 slideInLeft wow" data-wow-duration=".1s" data-wow-delay=".2s"></div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div><!-- Business Solutions Wrap -->
+                </div>
+            </div>
+        </section>
         <section>
             <div class="gap">
                 <div class="container">
@@ -1427,6 +1539,8 @@
             </div>
         </section>
         <section>
+
+            
             
         </section>
         <section>
